Javadocs notations for service classes